maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:5: error: '{' expected but 'case' found.
         case 0 =>{if (!isFacingWall()) {forward()}} 
         ^RandomMouseMaze:6: error: '}' expected but 'case' found.
         case 1 =>{right(); if (!isFacingWall()) {forward()}
         ^RandomMouseMaze:13: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:20: error: eof expected but '}' found.
}
^